# email-api

./: .env.example  .gitignore  API_USAGE_EXAMPLES.md  DEPLOYMENT_GUIDE.md  QUICK_START.md  README.md  SECURITY_API_DOCUMENTATION.md  examples.md  first.py  main.py  main_secure.py  pyproject.toml  requirements.txt  schemas.py
api/: endpoints.py
functions/: get_unread_emails.py  mark_email_as_read.py  mark_emails_as_read_batch.py  mark_emails_as_unread_batch.py  send_email.py
models/: database.py
utils/: auth.py  email_utils.py  rate_limiter.py  secure_email.py
